cards/main/style.css
/*
 *  ============
 *   GLOBAL CSS
 *  ============
 */

:root {
  --yellow: #fffd9e;
  --pa-brightness-reduce: 60%;
}


.card {
  /*font-family: hiragino;*/
  font-family: notosans;
  font-size: 30px;
  text-align: center;
  font-style: normal;
  color: white;
  background-color: black;
}

/* makes lists tolerable to look at */
ol, ul {
  margin-top: 0px;
  margin-bottom: 10px;
  padding-left: 1.5em;
}

/* makes the summary tag's clickable area not span the entire width of the given area */
summary {
  display: inline-block;
  width: min-content;
  white-space: nowrap;
  padding-left: 20px;
  padding-right: 20px;
}

/* https://stackoverflow.com/questions/1269589/css-center-block-but-align-contents-to-the-left */
/* wrap elements in two divs: center-box-1 and center-box-2 */
.center-box-1 {
  text-align: center;
}

.center-box-2 {
  display: inline-block;
  text-align: left;
}

@font-face {
  font-family: hiragino;
  src: url('hiragino-mincho-pron-w3.otf');
}
@font-face {
  font-family: notosans;
  src: url('NotoSansCJK-Regular.ttc');
}
/*@font-face { font-family: yumin; src: url('_yumin.ttf'); }*/
/*@font-face { font-family: notoserif; src: url('NotoSerifCJK-Regular.ttc'); }*/


.bold-yellow b {
  color: var(--yellow);
}

/*.bold-remove-font-weight b {
  font-weight: normal;
}*/






/*
 *  ================
 *   FRONT SIDE CSS
 *  ================
 */

.card-description {
  font-family: hiragino;
  color: #585858;
  font-size: 20px;
  text-align: left;
}



/* https://stackoverflow.com/a/38948646 (ver 5) */
.expression-box {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  grid-column-gap: 5px;
  justify-items: center;

  margin-bottom: -0.0em;
  margin-top: 0.3em;
  font-size: 50px;
  font-family: hiragino;
}

.flag-box {
  margin-left: auto;
  grid-column-start: 1;
}

.flag-box__circle {
}


.flag-box__circle--all { /* test entire display (whether it's a word or sentence) */
  fill: #5cf570;
}
.flag-box__circle--word {
  fill: #34dbef;
}
.flag-box__circle--none {
  fill: #f53b39;
}
.flag-box__circle--default { /* unused */
  fill: #21dd1e;
}


/* space at the top of the window on the front side */
.expression {
}

.expression b {
  /*color: var(--yellow);*/
  font-weight: normal;
}

.expression ruby rt { opacity: 0; }
.expression:hover ruby rt { opacity: 1; }


/* used in other cards where PA flag is not shown */
.expression--single {
  margin-bottom: -0.0em;
  margin-top: 0.3em;
  font-size: 50px;
  font-family: hiragino;
}

/* used when the front side display is a word and not a sentence (increase font size) */
.expression--word {
  font-size: 70px;
}


.hint {
  font-size: 16px;
}


/*
 *  ===============
 *   BACK SIDE CSS
 *  ===============
 */


/*
 * adds a width constraint to the backside to make things look better
 * - only applied after the main definition header
 */
.back-side {
  max-width: 850px;
  margin: 20px auto 20px auto;
  padding: 0 20px 0 20px;
}

.answer-border {
  border-bottom: 1px solid;
  margin-top: 10px;
  margin-bottom: 15px;
  width: 95%;
}



/*
 * -------------------
 *  Word pitch accent
 * -------------------
 */

/* css classes used by the plugin */
.downstep {
  color: var(--yellow);
  position: relative;
}
.downstep:before {
  content: '';
  width: 2px;
  height: 18%;
  background: var(--yellow);
  position: absolute;
  display: block;
  top: 0px;
  left: 0px;
}


.pitchoverline {
  text-decoration: none !important;
  text-decoration-color: var(--yellow) !important;
  position: relative;
}
.pitchoverline:after {
  content: '';
  width: 100%;
  height: 2px;
  background: var(--yellow);
  position: absolute;
  top: 0px;
  right: 0px;
}


.nopron {
  color: #42a3ff;
}
.nasal {
  color: #f12a2a;
}





/*
 * -------------------
 *  Definition header
 * -------------------
 */


/* contains the word, picture, and pitch accent */
/* no idea for a good name, so going to call it "def-header" == definition header */
.def-header {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 820px;
  margin: auto;
}

.dh-left { /* left */
  background: rgba(0, 0, 0, 0.1);
  padding: 0.5em 0.5em; /* top/bottom, right/left */
  border-radius: 5px;
  flex: 1; /* takes up all available space */
}

/* PA cards only */
.dh-left--blue-border { /* left */
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 71, 83, 1);
}


.dh-left__reading {
  font-size: 50px;
  font-family: hiragino;
  white-space: nowrap; /* so the reading can expand into the image */
}

.dh-left__word-pitch {
  margin-top: 15px;
  font-size: 23px;
  vertical-align: middle;
}

/* bigger word pitch for the pitch accent cards */
.dh-left__word-pitch--big {
  font-size: 30px;
  margin-top: 8px;
}

.dh-left__word-pitch--big .downstep:before {
  width: 3px;
  height: 19%;
  top: 0px;
  left: -1px;
}

.dh-left__word-pitch--big .pitchoverline:after {
  height: 3px;
  top: 0px;
  right: 0px;
}



/*
 * -----------------------------------------
 *  Def Header Left - Word PA bold override
 * -----------------------------------------
 * overwriting the bold ability:
 * - bold == not the correct sound used in the sound clip
 *
 */
.dh-left__word-pitch b {
  font-weight: normal;
  color: #808080;
  font-size: 15px;
}

.dh-left__word-pitch b .pitchoverline:after {
  content: '';
  width: 100%;
  height: 1px;
  background: var(--yellow);
  filter: brightness(var(--pa-brightness-reduce));
  position: absolute;
  top: -1px;
  right: -1px;
}

.dh-left__word-pitch b .downstep:before {
  content: '';
  width: 1px;
  height: 25%;
  background: var(--yellow);
  /*filter: brightness(var(--pa-brightness-reduce));*/
  position: absolute;
  display: block;
  top: -1px;
  left: 0px;
}

.dh-left__word-pitch b .nopron {
  filter: brightness(var(--pa-brightness-reduce));
}
.dh-left__word-pitch b .nasal {
  filter: brightness(var(--pa-brightness-reduce));
}
.dh-left__word-pitch b .downstep {
  filter: brightness(var(--pa-brightness-reduce));
}



/*
 * ----------------------------
 *  Def Header Left - PA cards
 * ----------------------------
 */
.dh-left__bottom {
  justify-content: center;
  display: flex;
  align-items: center;
  font-size: 15px;
}

.dh-left__graph {
}

.dh-left__gap {
  font-size: 20px;
  padding-left: 10px;
  color: #d0d0d0;
}

.dh-left__audio-buttons {
  font-size: 23px;
  vertical-align: middle;
}



/*
 * --------------------------
 *  Def Header Right - Image
 * --------------------------
 */




.dh-right__img {
  border-radius: 5px;
  cursor: pointer;
  display: block;
  min-width: 200px;
  max-width: 400px;
  margin-left: auto;
  margin-right: auto;
}

/* moved the hover element to the div to prevent the size transform transition from showing */
.dh-right__img-container {
  transition: 0.3s;
}

/* not applied to the image because of above comment (prevent showing the transition) */
.dh-right__img-container:hover {
  opacity: 0.7;
}




/*
 * --------------------
 *  Def Header - Other
 * --------------------
 */
.dh-gap {
  min-width: 35px
}

.dh-right {
  font-size: 40px;

  max-width: 400px;
  max-height: 210px;
}






/*
 * -------
 *  Modal
 * -------
 */


.modal {
  display: none; /* hidden by default */
  position: fixed; /* stay in place */
  z-index: 99; /* sit on top */
  left: 0;
  top: 0;
  width: 100%; /* full width */
  height: 100%; /* full height */
  overflow: auto; /* enable scroll if needed */
  background-color: rgb(0,0,0); /* fallback color */
  background-color: rgba(0,0,0,0.75); /* black w/ opacity */
}

.modal {
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.25s ;
  animation-name: zoom;
  animation-duration: 0.25s;
}

/* Add Animation */
.modal-img/*, #caption*/ {
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.25s ;
  animation-name: zoom;
  animation-duration: 0.25s;
  max-width: initial;
  max-height: initial;

  /*
   * center image vertically and horizontally
   * https://stackoverflow.com/a/11716065
   */
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.modal-img__zoom-out {
  animation-name: zoom-out;
  animation-duration: 0.25s;
}


@-webkit-keyframes zoom {
  0% {
    display: none;
    opacity: 0;
  }

  0.001% {
    display: block;
    opacity: 0;
  }

  100% {
    display: block;
    opacity: 100;
  }
}
@keyframes zoom {
  0% {
    display: none;
    opacity: 0;
  }

  0.001% {
    display: block;
    opacity: 0;
  }

  100% {
    display: block;
    opacity: 100;
  }

}

@-webkit-keyframes zoom-out {
  0% {
    display: block;
    opacity: 100;
  }
  99.999% {
    display: block;
    opacity: 0;
  }
  100% {
    display: none;
    opacity: 0;
  }
}

@keyframes zoom-out {
  0% {
    display: block;
    opacity: 100;
  }
  99.999% {
    display: block;
    opacity: 0;
  }
  100% {
    display: none;
    opacity: 0;
  }
}


/*
 * ---------------
 *  Full sentence
 * ---------------
 */

.full-sentence {
  font-size: 28px;
  margin: 0 0 0.5em 0;
  font-family: hiragino;
}
.full-sentence ruby rt { opacity: 0; }
.full-sentence:hover ruby rt { opacity: 1; }



/*
 * -----------------------------------
 *  Definitions and collapsable boxes
 * -----------------------------------
 */
.glossary-blockquote {
  font-size: 18px;

  text-align: left;
  background: rgba(0, 0, 0, 0.1);
  font-size: 18px;
  border-left: 5px solid #ccc;
  margin: 0 5px;
  padding: 0.5em 10px;
}

.glossary-blockquote p {
  display: inline;
}

.glossary-details {
  font-size: 18px;
  margin: 0.5em 0 0 0;
}


/*
 * For some reason, it appears that the furigana positioning is way too high when used in the glossary.
 * Athough I would like these settings to work globally, it would sacrifice some minor things
 * that <ruby> normally takes care of automatically, such as not having additional spacing on
 * the left/right of the kanjis when the furigana takes up more space than the allocated kanjis.
 *
 * tl;dr only affects glossary css as a quick fix, as the default <ruby> styles are usually preferable.
 */
.glossary-blockquote ruby {
  display: inline-flex;
  flex-direction: column-reverse;
}
.glossary-blockquote rt {
  padding-top: 3px;
  display: inline;
  line-height: 1;
}
.glossary-blockquote rb {
  display: inline;
  line-height: 1;
  text-align: center;
}


.glossary-blockquote--small {
  font-size: 15px;
}
.glossary-details--small {
  font-size: 15px;
}


/* styles to all images within any definition blockquote */
.glossary__image-container {
  display: inline-block;
}

.glossary__image-hover-text {
}

.glossary__image-hover-media {
  display: none;
}

.glossary__image-hover-text:hover ~ .glossary__image-hover-media {
  display: block;
  position: absolute;
}

.glossary__image-hover-media {
  cursor: pointer;
  max-height: 500px;
  max-width:  100px;
}

/* so the image doesn't disappear once you move your mouse away from the text */
.glossary__image-hover-media:hover {
  display: block;
  position: absolute;
}




/* I have no idea what these do but I'm assuming they are useless for this card */

/*
.nightMode {
  svg > text { fill: #fff !important; }
  svg > path { stroke: #fff !important; }
  svg > circle[r="5"] { fill: #fff !important; }
  svg > circle[r="3.25"] { fill: #2d2d2d !important; }
}
*/

/*
.win .jp { font-family: "MS Mincho", "ＭＳ 明朝"; }
.mac .jp { font-family: "Hiragino Mincho Pro", "ヒラギノ明朝 Pro"; }
.linux .jp { font-family: "Kochi Mincho", "東風明朝"; }
.mobile .jp { font-family: "Hiragino Mincho ProN"; }
*/

